<resources>
    <string name="app_name">STEP App</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_people">People</string>
    <string name="action_map">Map</string>
    <string name="action_faqs">FAQs</string>
    <string name="action_admin">Admin</string>
    <string name="action_miscellaneous">Miscellaneous</string>
    <string name="action_announcements">Announcements</string>
    <string name="action_hours">Hours</string>
    <string name="announcements_header">General Announcements</string>
    <string name="people_header">People</string>
    <string name="miscannouncements_header">Miscellaneous Announcements</string>
    <string name="calendar_header">Calendar</string>
</resources>
